--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "remix vite:dev",
     "lint:old": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "lint":"biome lint --apply ./app",
-    "format": "biome format ./app",
+    "format": "biome format --write ./app",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
